# vibe-voice-vendor

./: .dockerignore  .gitignore  CONTRIBUTING  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  setup.sh  teardown.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: e2e.yml
client/: cli.py  client.py
deploy/: Caddyfile  env.example  vibevoice-proxy.service  vibevoice-server.service
doc/: vibevoice-asr-quality-investigation.md
rust_proxy/: Cargo.toml
rust_proxy/src/: main.rs
sample/: README.md  letter_factory_leap_frog.json  recording_with_hebrew.txt
scripts/: generate_cert.py  generate_token.py
server/: __main__.py  app.py  audio.py  auth.py  config.py  groq_client.py  queue.py  transcribe.py  vllm_client.py
server/routes/: health.py  transcribe.py
tests/: conftest.py  test_audio.py  test_auth.py  test_client_ca_cert.py  test_generate_cert.py  test_queue.py  test_transcribe.py
tests/e2e/: mock_vllm.py
